--- a/app/src/main/res/layout/recycler_item_post.xml
+++ b/app/src/main/res/layout/recycler_item_post.xml
@@ -20,8 +20,7 @@
             android:id="@+id/iv_post_icon"
             android:src="@mipmap/ic_launcher"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:transitionName="icon_transition" />
+            android:layout_height="wrap_content"/>
 
         <LinearLayout
             android:layout_width="match_parent"
