패키지명 소문자로 변경(Databinding error)

--- a/app/src/main/res/layout/activity_databinding_basic.xml
+++ b/app/src/main/res/layout/activity_databinding_basic.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="data"
-            type="com.bungabear.androidstudy.Model.DatabindingBasicTestModel"/>
+            type="com.bungabear.androidstudy.model.DatabindingBasicTestModel"/>
     </data>
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
