--- a/app/src/main/res/layout/activity_basic_view_test.xml
+++ b/app/src/main/res/layout/activity_basic_view_test.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activity.BasicViewTest">
+    tools:context=".activity.BasicViewTest">
 
     <Button
         android:id="@+id/main_btn_1"
