--- a/app/src/main/res/layout/activity_bottom_viewpager_tab.xml
+++ b/app/src/main/res/layout/activity_bottom_viewpager_tab.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/vp_activity_bottom_viewpager_tab"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -14,9 +14,9 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp">
 
-    </android.support.v4.view.ViewPager>
+    </androidx.viewpager.widget.ViewPager>
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/tl_activity_bottom_viewpager_tab"
         android:layout_width="match_parent"
         android:layout_height="55dp"
@@ -31,30 +31,30 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <!-- dummy -->
-        <android.support.design.widget.TabItem
+        <com.google.android.material.tabs.TabItem
             android:text="0"
             android:icon="@drawable/ic_launcher_background"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <android.support.design.widget.TabItem
+        <com.google.android.material.tabs.TabItem
             android:text="0"
             android:icon="@drawable/ic_launcher_background"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <android.support.design.widget.TabItem
+        <com.google.android.material.tabs.TabItem
             android:text="0"
             android:icon="@drawable/ic_launcher_background"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <android.support.design.widget.TabItem
+        <com.google.android.material.tabs.TabItem
             android:text="0"
             android:icon="@drawable/ic_launcher_background"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-    </android.support.design.widget.TabLayout>
+    </com.google.android.material.tabs.TabLayout>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
